# tello-drone

./: .gitignore  DIARY.md  PLAN.md  README.md
config/: mission_params.yaml  tello_calibration.yaml
data/bags/voo_01/: metadata.yaml
data/bags/voo_02/: metadata.yaml
data/bags/voo_03/: metadata.yaml
data/bags/voo_04/: metadata.yaml
data/bags/voo_05/: metadata.yaml
data/bags/voo_06/: metadata.yaml
data/bags/voo_08/: metadata.yaml
data/bags/voo_09/: metadata.yaml
data/bags/voo_10/: metadata.yaml
data/bags/voo_11/: metadata.yaml
data/bags/voo_12/: metadata.yaml
data/bags/voo_13/: metadata.yaml
data/bags/voo_14/: metadata.yaml
data/test_capture_output/: poses.csv
data/test_images/: poses.csv
launch/: tello_base.launch.py
scripts/: fake_image_pub.py  ros_env.sh  stitch_mosaic.py  tello_teleop.py  test_dds.sh  test_mission_planner.py  test_mosaic_capture.py  test_stitch.py
tello_ws/data/images/: poses.csv
tello_ws/src/camera_info_publisher/: package.xml  setup.py
tello_ws/src/camera_info_publisher/camera_info_publisher/: node.py
tello_ws/src/mission_planner/: package.xml  setup.py
tello_ws/src/mission_planner/mission_planner/: controller.py  grid.py  node.py
tello_ws/src/mosaic_capture/: package.xml  setup.cfg  setup.py
tello_ws/src/mosaic_capture/mosaic_capture/: node.py
tello_ws/src/tello/tello/: node.py
tello_ws/src/tello_inspection/: package.xml  setup.cfg  setup.py
tello_ws/src/tello_inspection/tello_inspection/: node.py
tello_ws/src/tello_ros/tello_driver/h264decoder/: h264decoder.cpp  h264decoder.hpp
tello_ws/src/tello_ros/tello_driver/include/: tello_driver_node.hpp
tello_ws/src/tello_ros/tello_driver/src/: tello_driver_node.cpp  video_socket.cpp
