<?xml version="1.0"?>
<package format="3">
  <name>camera_info_publisher</name>
  <version>0.1.0</version>
  <description>Publishes CameraInfo from a calibration YAML, stamped to match /image_raw</description>
  <maintainer email="rianrbps@gmail.com">RianRBPS</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
