<?xml version="1.0"?>
<package format="3">
  <name>mission_planner</name>
  <version>0.1.0</version>
  <description>Autonomous grid mission planner for Tello drone</description>
  <maintainer email="rianrbps@gmail.com">RianRBPS</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tello_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
