<?xml version="1.0"?>
<package format="3">
  <name>mosaic_capture</name>
  <version>0.1.0</version>
  <description>Saves camera frames + poses at fixed distance intervals for mosaic stitching</description>
  <maintainer email="rianrbps@gmail.com">RianRBPS</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
