<?xml version="1.0"?>
<package format="3">
  <name>tello_inspection</name>
  <version>0.1.0</version>
  <description>
    Indoor inspection node: subscribes to /image_raw and /odom from the
    Tello driver, captures overlapping frames, stitches a mosaic, and runs
    defect/anomaly detection on the result.
  </description>
  <maintainer email="rianrbps@gmail.com">riris</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
